--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     </div>
     <div class="links">
         <ul>
-            <ul><a href="">Instagram</a></ul>
-            <ul><a href="">Facebook</a></ul>
-            <ul><a href="https://www.schedulicity.com/scheduling/mhsdxs" target="blank">Schedule an appointment</a></ul>
-            <ul><a href="tel:phonenumber">Phone: XXX.XXX.XXXX</a></ul>
-            <ul><a href="mailto:emailaddress">Email: XXXXXXXXXX</a></ul>
+            <ul><img src="/instagramchic.png" class="icon"/> <a href="https://www.instagram.com/mjchic_hair/" target="blank">Instagram</a></ul>
+            <ul><img src="/facebookchic.png" class="icon"/> <a href="https://www.facebook.com/MJ-Chic-289074847917361/" target="blank">Facebook</a></ul>
+            <ul><img src="/bookchic.png" class="icon"/> <a href="https://www.schedulicity.com/scheduling/mhsdxs" target="blank">Schedule an appointment</a></ul>
+            <ul><img src="/mapchic.png" class="icon"/> <a href="https://goo.gl/maps/daGVrpjWyeD2" target="blank">1310 W Davis, Dallas, TX</a></ul>
         </ul>
     </div>
 </body>
