--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     </div>
     <div class="links">
         <ul>
-            <ul><img src="/instagramchic.png" class="icon"/> <a href="https://www.instagram.com/mjchic_hair/" target="blank">Instagram</a></ul>
+            <ul><img src="/instagramchic.png" class="icon"/> <a href="https://www.instagram.com/mjchic_studio/" target="blank">Instagram</a></ul>
             <ul><img src="/facebookchic.png" class="icon"/> <a href="https://www.facebook.com/MJ-Chic-289074847917361/" target="blank">Facebook</a></ul>
             <ul><img src="/bookchic.png" class="icon"/> <a href="https://www.schedulicity.com/scheduling/mhsdxs" target="blank">Schedule an appointment</a></ul>
             <ul><img src="/mapchic.png" class="icon"/> <a href="https://goo.gl/maps/daGVrpjWyeD2" target="blank">1310 W Davis, Dallas, TX</a></ul>
+            <ul>(214) 631-9712</ul>
         </ul>
     </div>
 </body>
