--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div>
-        <img class="logo" src='/mjchiclogo.png'/>
+        <img class="logo" src='/mjchicpinklogo.jpg'/>
     </div>
     <div class="links">
         <ul>
